--- a/Tirando Dados/style.css
+++ b/Tirando Dados/style.css
@@ -16,3 +16,10 @@
     justify-content: center;
     font-size:40px;
 }
+
+.squareCube{
+    display:flex;
+    margin-right:20px;
+    width:60px;
+    height:60px;
+}
